--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,12 +14,24 @@ html {
 	font-family: Arial, Helvetica, sans-serif;
 }
 body {
+	position: relative;
+	display: grid;
+	grid-template-rows: max-content auto max-content;
 	background: var(--secondary);
+	max-width: 100rem;
+	min-height: 100vh;
+	margin: auto;
 
 	& *:not(h1, h2, h3, h4, h5) {
 		font-size: 1.6rem;
 		color: var(--primary);
 	}
+}
+
+img.ivy {
+	position: fixed;
+	bottom: 0;
+	left: 0;
 }
 
 h1 {
@@ -42,11 +54,17 @@ h1,
 h2,
 h3,
 h4 {
+	margin-bottom: 0.5em;
+
 	& * {
 		font-size: inherit;
 	}
 }
 
 a {
-	text-decoration: none;
+	// text-decoration: none;
+}
+
+div.content a {
+	padding: 0 0.4rem;
 }
