--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,6 +2,7 @@
 @import "header";
 @import "menu";
 @import "posts-menu";
+@import "components";
 
 * {
 	margin: 0;
@@ -65,6 +66,14 @@ a {
 	// text-decoration: none;
 }
 
-div.content a {
+div.content a.content--link {
 	padding: 0 0.4rem;
+}
+
+select {
+	background: var(--secondary);
+}
+
+option {
+	color: var(--primary);
 }
